--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -51,6 +51,7 @@
         <li><a href="/auth/logout">Logout</a></li>
         <% } else { %>
         <li><a href="/auth/login">Login</a></li>
+        <li><a href="/auth/register">Register</a></li>
         <% } %>
         <li><a href="/">Homepage</a></li>
         <li><a href="/profile">Profile</a></li>
